# deep-symbolic-optimization

./: .cursorignore  .gitignore  CHANGELOG.MD  FINAL_MIMO_INTEGRATION_REPORT.md  MIMO_CLEANUP_SUMMARY.md  MIMO_IMPLEMENTATION_SUMMARY.md  MIMO_INTEGRATION_FIXES.md  MODULAR_README.md  README.md  WARP.md  changed_files.txt  dso_log.txt  main.bat  main.sh  mkdocs.yml  pyproject.toml  setup.py  test_mimo_fixed.py
.github/workflows/: gemini-issue-scheduled-triage.yml
configs/requirements/: base-requirements.txt  base-requirements_all.txt  base_legacy.txt  base_legacy_all.txt  base_legacy_regression.txt  core.txt  dev.txt  docs-requirements.txt  extras.txt  requirements-legacy36.txt
docs/: README.md  index.md  overview.md
docs/architecture/: overview.md
docs/core/: getting_started.md
docs/guides/: getting_started.md  installation.md  legacy_setup.md
docs/legal/: CODE_OF_CONDUCT.md  SECURITY.md
docs/operations/: release_process.md
docs/reference/: api_reference.md
docs/rules/: code_style.md  git_rules.md  security_rules.md
docs/structure/: project_structure.md
docs/todo/: legacy_setup_cli_plan.md  modernization_plan.md
dso/: __init__.py  pyproject.toml  setup.py
dso-docs/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
dso-docs/blog/: authors.yml  tags.yml
dso-docs/docs/: README.md  intro.md  summary.md
dso/dso/: __init__.py  checkpoint.py  core.py  cyfunc.cpp  logeval.py  prior.py  run.py  tf_config.py  tf_state_manager.py  train.py  train_stats.py  utils.py
dso/dso_pkg/: core.py  prior.py  program.py
dso_pkg/: __init__.py  setup.py
dso_pkg/dso/: __init__.py  checkpoint.py  const.py  core.py  core_fixed.py  core_unified.py  cyfunc.c  cyfunc.pyx  functions.py  hook3ddataset.py  library.py  logeval.py  memory.py  program.py  tf_config.py  tf_state_manager.py  train.py  train_stats.py  unified_dso.py  utils.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/rules/: index.html
site/search/: search_index.json
summary/2025-09-01-161331/: events.out.tfevents.1756736011.andrei-ThinkPad-T470.1363256.0.v2
summary/2025-09-19-153351/: events.out.tfevents.1758288831.andrei-ThinkPad-T470.275923.0.v2
summary/2025-09-19-153519/: events.out.tfevents.1758288919.andrei-ThinkPad-T470.277596.0.v2
summary/2025-09-22-135441/: events.out.tfevents.1758542081.SKJ-HIWIOST.32472.0.v2
summary/2025-09-22-135737/: events.out.tfevents.1758542257.SKJ-HIWIOST.3924.0.v2
summary/2025-09-22-140634/: events.out.tfevents.1758542794.SKJ-HIWIOST.20728.0.v2
summary/2025-09-22-140727/: events.out.tfevents.1758542847.SKJ-HIWIOST.32244.0.v2
summary/2025-09-22-142251/: events.out.tfevents.1758543771.SKJ-HIWIOST.32856.0.v2
test_logs/: test_mimo.csv  test_mimo.json
test_logs/test_mimo_summary/: events.out.tfevents.1756735146.andrei-ThinkPad-T470.1353082.0.v2  events.out.tfevents.1756735183.andrei-ThinkPad-T470.1353429.0.v2  events.out.tfevents.1756735219.andrei-ThinkPad-T470.1353729.0.v2  events.out.tfevents.1756735268.andrei-ThinkPad-T470.1354132.0.v2  events.out.tfevents.1756735839.andrei-ThinkPad-T470.1360352.0.v2  events.out.tfevents.1756736090.andrei-ThinkPad-T470.1364304.0.v2  events.out.tfevents.1756805835.andrei-ThinkPad-T470.1454590.0.v2  (+1 more)
tests/: modular_dso_demo.py  test_modular_system.py
tools/: README.md
tools/bash/: README.md  run.sh
tools/bat/: README.md  (+1 more)
(+175 files in other folders)
