[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=0.29.33", "numpy>=1.26"]
build-backend = "setuptools.build_meta"

[project]
name = "dso"
version = "2.0.0"
description = "Deep Symbolic Optimization (TF2 branch)"
readme = "README.md"
authors = [ { name = "LLNL" } ]
license = { text = "BSD-3-Clause" }
# Restrict to Python 3.11 series to avoid solver considering future 3.13+ splits
# that force TensorFlow 2.19 to require numpy>=2.1 (conflicting with our <2.0 pin).
# If/when upgrading to Py3.12/3.13 and TF >=2.20, revisit and relax this.
requires-python = ">=3.11,<3.12"
# Core runtime dependencies
dependencies = [
  "click",
  "colorama",
  "json5",
  "deap",
  "dill",
  "numba",
  "numpy>=1.26,<2.0",
  "pandas",
  "pathos",
  "prettytable",
  "pyyaml",
  "scikit-learn",
  "seaborn",
  "sympy",
  "tqdm",
  "tensorflow>=2.19,<2.20"
]

[project.optional-dependencies]
extras = [
  "gymnasium[box2d,classic-control]>=1.0.0a1",
  "stable-baselines3>=2.0",
  "control"
]
# Dev includes docs + test + lint + type tooling
dev = [
  "mkdocs>=1.5",
  "mkdocs-material[imaging]>=9.2",
  "mkdocs-awesome-pages-plugin>=2.9",
  "pymdown-extensions>=10",
  "mkdocstrings[python]>=0.23",
  "mkdocs-markdownextradata-plugin>=0.2.5",
  "pytest>=8",
  "pytest-cov>=4",
  "black>=23",
  "isort>=5.13",
  "flake8>=7",
  "mypy>=1.10",
  "pip-tools>=7",
  "uv>=0.1"
]
all = ["dso[extras,dev]"]

[project.scripts]
# Unified CLI (optional). After install: `dso-tool menu`
"dso-tool" = "tools.python.run:interactive_menu"

[tool.setuptools]
packages = ["dso"]


[tool.setuptools.package-dir]
dso = "dso/dso"

[tool.setuptools.exclude-package-data]
"*" = ["log*", "site*", "configs*"]

[tool.uv]
# No dependency-groups (feature not supported in current uv); rely on extras via optional-dependencies.

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]

# Transitional note: legacy configs/requirements/*.in still exist; setup tooling detects pyproject first.
